# discord-types-rs

./: .editorconfig  .gitignore  Cargo.toml  README.md  rustfmt.toml
src/: bitflags.rs  command.rs  event.rs  lib.rs  request.rs  types.rs  voice.rs
