[package]
name = "discord-types"
version = "0.1.0"
authors = ["kebabtent <kebabtent@gmail.com>"]
description = "Asynchronous Rust library for the Discord API"
license = "Apache-2.0"
repository = "https://github.com/kebabtent/discord_types"
readme = "README.md"
edition = "2021"

[dependencies]
bitflags = { version = "2.1" }
chrono = { version = "0.4", features = ["serde"] }
emoji = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
sqlx = { version = "0.6", optional = true }

[dev-dependencies]
serde_test = "1.0"
